[package]
name = "grok_genesis"
version = "0.1.0"
description = "Created with Solana Playground"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
